fix gap 2

--- a/styles/default.css
+++ b/styles/default.css
@@ -177,7 +177,7 @@ body {
     position: relative;
     /* background-color: green; */
     /* padding: 200px 0; */
-    height: calc(350px - 15vw);
+    height: calc(310px - 15vw);
     
 }
 .product {
